--- a/Document/ClassDiagram/ModelingOOAD/SoDoLopLib/SoDoLopLib.csproj
+++ b/Document/ClassDiagram/ModelingOOAD/SoDoLopLib/SoDoLopLib.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FCE3E428-B3A5-474C-917C-2214195C32B9}</ProjectGuid>
+    <ProjectGuid>{6FC61D72-8ED3-4CCD-9DEA-05C319318D4F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ModelingProject2Lib</RootNamespace>
-    <AssemblyName>ModelingProject2Lib</AssemblyName>
+    <RootNamespace>SoDoLopLib</RootNamespace>
+    <AssemblyName>SoDoLopLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,10 +39,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GeneratedCode\ChiTietLichTrinh.cs" />
+    <Compile Include="GeneratedCode\DacTrung.cs" />
+    <Compile Include="GeneratedCode\DiemDuLich.cs" />
+    <Compile Include="GeneratedCode\DoiTac.cs" />
+    <Compile Include="GeneratedCode\GiamDoc.cs" />
+    <Compile Include="GeneratedCode\KhachHang.cs" />
+    <Compile Include="GeneratedCode\LichTrinh.cs" />
+    <Compile Include="GeneratedCode\NhanVien.cs" />
+    <Compile Include="GeneratedCode\NVDieuHanh.cs" />
+    <Compile Include="GeneratedCode\NVSale.cs" />
+    <Compile Include="GeneratedCode\PhongBan.cs" />
+    <Compile Include="GeneratedCode\Tour.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="GeneratedCode\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
