--- a/Code/QuanLyDuLich/QuanLyDuLich/QuanLyDuLich.csproj
+++ b/Code/QuanLyDuLich/QuanLyDuLich/QuanLyDuLich.csproj
@@ -133,8 +133,8 @@
     <EmbeddedResource Include="GUI\frmDangNhap.resx">
       <DependentUpon>frmDangNhap.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\frmGiamDoc.resx">
-      <DependentUpon>frmGiamDoc.cs</DependentUpon>
+    <EmbeddedResource Include="GUI\frmNhanVienSaleTour.resx">
+      <DependentUpon>frmNhanVienSaleTour.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\frmQuanLyDiemDuLich.resx">
       <DependentUpon>frmQuanLyDiemDuLich.cs</DependentUpon>
