--- a/Code/QuanLyDuLich/QuanLyDuLich/QuanLyDuLich.csproj
+++ b/Code/QuanLyDuLich/QuanLyDuLich/QuanLyDuLich.csproj
@@ -125,6 +125,12 @@
     <Compile Include="GUI\frmThongKeSaleTour.Designer.cs">
       <DependentUpon>frmThongKeSaleTour.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\frmXemChiTietTour.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\frmXemChiTietTour.Designer.cs">
+      <DependentUpon>frmXemChiTietTour.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XemTour.cs">
