--- a/Document/ClassDiagram/ModelingOOAD/SoDoLopLib/SoDoLopLib.csproj
+++ b/Document/ClassDiagram/ModelingOOAD/SoDoLopLib/SoDoLopLib.csproj
@@ -39,6 +39,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GeneratedCode\BLL\ChiTietLichTrinh.cs" />
+    <Compile Include="GeneratedCode\BLL\DiemDuLich.cs" />
+    <Compile Include="GeneratedCode\BLL\DoiTac.cs" />
+    <Compile Include="GeneratedCode\BLL\GiamDoc.cs" />
+    <Compile Include="GeneratedCode\BLL\KhachHang.cs" />
+    <Compile Include="GeneratedCode\BLL\LichTrinh.cs" />
+    <Compile Include="GeneratedCode\BLL\NhanVien.cs" />
+    <Compile Include="GeneratedCode\BLL\NVDieuHanh.cs" />
+    <Compile Include="GeneratedCode\BLL\NVSale.cs" />
+    <Compile Include="GeneratedCode\BLL\PhongBan.cs" />
+    <Compile Include="GeneratedCode\BLL\Tour.cs" />
     <Compile Include="GeneratedCode\ChiTietLichTrinh.cs" />
     <Compile Include="GeneratedCode\DiemDuLich.cs" />
     <Compile Include="GeneratedCode\DoiTac.cs" />
