--- a/Code/QuanLyDuLich/QuanLyDuLich/QuanLyDuLich.csproj
+++ b/Code/QuanLyDuLich/QuanLyDuLich/QuanLyDuLich.csproj
@@ -121,7 +121,9 @@
     <Compile Include="GUI\frmThemDoiTac.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\frmThemDoiTac.Designer.cs" />
+    <Compile Include="GUI\frmThemDoiTac.Designer.cs" >
+	<DependentUpon>frmThemDoiTac.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\frmXemChiTietTour.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -161,7 +163,9 @@
     <EmbeddedResource Include="GUI\frmNhanVienSaleTour.resx">
       <DependentUpon>frmNhanVienSaleTour.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\frmThemDoiTac.resx" />
+    <EmbeddedResource Include="GUI\frmThemDoiTac.resx" >
+	<DependentUpon>frmThemDoiTac.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\frmXemChiTietTour.resx">
       <DependentUpon>frmXemChiTietTour.cs</DependentUpon>
     </EmbeddedResource>
