--- a/Code/QuanLyDuLich/QuanLyDuLich/QuanLyDuLich.csproj
+++ b/Code/QuanLyDuLich/QuanLyDuLich/QuanLyDuLich.csproj
@@ -134,6 +134,7 @@
     <Compile Include="GUI\QuanLyTour.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GUI\RememberMe.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XemTour.cs">
