--- a/Code/QuanLyDuLich/QuanLyDuLich/QuanLyDuLich.csproj
+++ b/Code/QuanLyDuLich/QuanLyDuLich/QuanLyDuLich.csproj
@@ -144,6 +144,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\RememberMe.cs" />
+    <Compile Include="GUI\SQLDateTime.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XemTour.cs">
